--- a/src/main/resources/reporttemplate/css/styles.css
+++ b/src/main/resources/reporttemplate/css/styles.css
@@ -1,36 +1,10 @@
 body {
-    background: url("../img/bg.png") fixed;
+    background-color: #ECF0F5;
+    font-family: 'Fira Sans', sans-serif;
 }
 
-#result {
-    margin-bottom: 15px;
-}
-
-#result button {
-    cursor: default;
-    padding: 18px 30px;
-}
-
-#environment .environment-name {
-    margin: 0;
-}
-
-.toggleable::after {
-    font-family: Icons, serif;
-    content: " \f0da";
-}
-
-.active.toggleable::after {
-    content: "  \f0d7";
-}
-
-#endpoints {
-    margin-top: 10px;
-    display: none;
-}
-
-#endpoints td.url {
-    word-break: break-all;
+a {
+    cursor: pointer;
 }
 
 .chart {
@@ -48,12 +22,8 @@ body {
     margin: 5px !important;
 }
 
-#content.container {
-    padding: 50px 10px;
-    background: rgba(0, 0, 0, 0.09);
-    -webkit-box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.75);
+#content {
+    padding-top: 110px;
 }
 
 #content.container .header {
@@ -72,10 +42,20 @@ body {
     color: black !important;
     position: relative;
     padding-left: 45px !important;
+    padding-right: 55px !important;
     border: none !important;
 }
 
-.status {
+.ui.accordion.feature-accordion{
+    margin: 1em 0;
+    background-color: #f3f5f8;
+}
+
+.ui.accordion.scenario-accordion {
+    background-color: #e4eaf1 !important;
+}
+
+.feature-accordion .status {
     width: 35px;
     height: 100%;
     position: absolute;
@@ -83,7 +63,7 @@ body {
     left: 0;
 }
 
-.status i {
+.feature-accordion .status i {
     top: 50%;
     margin: 0 auto;
     display: block;
@@ -94,6 +74,7 @@ body {
     color: white;
     font-size: 20px;
 }
+
 .skipped > .title > .status {
     background-color: #2185d0 !important;
 }
@@ -114,14 +95,24 @@ body {
     background-color: #21ba45 !important;
 }
 
-#legend {
-    margin: auto;
-    margin-top: 15px;
-    max-width: 600px;
+.skipped .status {
+    background-color: #2185d0 !important;
 }
 
-#legend div {
-    margin: 5px !important;
+.failed .status {
+    background-color: #db2828 !important;
+}
+
+.not-implemented .status {
+    background-color: #a4a4a4 !important;
+}
+
+.multiple-implementations .status {
+    background-color: #fbbd08 !important;
+}
+
+.passed .status {
+    background-color: #21ba45 !important;
 }
 
 .stepReport h5 {
@@ -132,6 +123,7 @@ body {
 .accordion .title h3, .accordion .title h4, .accordion .title h5 {
     margin: 0;
 }
+
 .execution-time {
     font-weight: normal;
 }
@@ -156,3 +148,358 @@ body {
     margin: 0;
     background: #ddd;
 }
+
+
+
+#top-header {
+    height: 50px;
+    width: 100%;
+    background-color: #4A4A4A;
+    position: fixed;
+    z-index: 999;
+    color: white;
+}
+
+#top-header #logo img {
+    vertical-align: middle;
+}
+
+#top-header #logo {
+    background-color: #2E2E2E;
+    float:left;
+    padding: 0 20px;
+    vertical-align: middle;
+    font-size: 20px;
+    width: 230px;
+}
+
+#top-header #logo > .title {
+    line-height: 50px;
+}
+
+#top-header #menu {
+    float: right;
+}
+
+#top-header #menu > a {
+    font-size: 14px;
+    font-weight: bold;
+    display: inline-block;
+    height: 50px;
+    line-height: 50px;
+    padding-right: 10px;
+    padding-left: 10px;
+    color: white;
+}
+
+#top-header #menu > a:hover {
+    background-color: #2E2E2E;
+}
+
+#bottom-header {
+    height: 50px;
+    width: 100%;
+    background-color: white;
+    position: fixed;
+    z-index: 100;
+    color: #1a2226;
+    top: 50px;
+    text-align: center;
+    line-height: 50px;
+    font-weight: bold;
+    font-size: 24px;
+}
+
+#bottom-header .environment-button {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    background-color: #89C475;
+    z-index: 100;
+}
+
+.toggleable::after {
+    font-family: Icons, serif;
+    content: " \f0d7";
+}
+
+.active.toggleable::after {
+    content: "  \f0d8";
+}
+
+#endpoints {
+    padding: 10px;
+    display: none;
+    position: fixed;
+    width: 100%;
+    top: 100px;
+    background: #DAE1E6;
+    z-index: 999;
+    max-height: 50%;
+    overflow: auto;
+}
+
+#endpoints td.url {
+    word-break: break-all;
+}
+
+.environment-name {
+    font-weight: bold;
+}
+
+.environment-name .env-label {
+    text-transform: uppercase;
+    color: #7B878A;
+}
+
+.environment-name .env-name {
+    font-size: 20px;
+}
+
+.report-section {
+    padding: 20px;
+}
+
+.report-section-header {
+    text-align: center;
+    padding: 20px;
+    text-transform: uppercase;
+    font-size: 24px;
+    color: #1a2226;
+}
+
+.report-section.even {
+    background-color: white;
+    -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2);
+}
+
+#logs .log {
+    min-height: 200px;
+    max-height: 700px;
+    height: auto;
+}
+
+#logs {
+    padding-bottom: 100px;
+}
+
+.test-result {
+    color: white;
+    height: 100px;
+    line-height: 100px;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.test-result.passed {
+    background-color: #21BA45;
+}
+
+.test-result.failed {
+    background-color: #DB2828;
+}
+
+#preloader {
+    width: 100%;
+    height: 100%;
+    display: table-cell;
+    position: fixed;
+    background-color: #2E2E2E;
+    z-index: 1000;
+    text-align: center;
+    font-family: Arial;
+}
+
+#preloader .preloader-banner {
+    position: relative;
+    top: 30%;
+    vertical-align: middle;
+    font-size: 30px;
+    color: white;
+}
+
+#preloader .preloader-banner img {
+    vertical-align: middle;
+}
+
+#preloader .preloader-banner .loading-info {
+    font-size: 10px;
+}
+
+#preloader .preloader-banner .loader {
+    margin-top: 20px;
+}
+
+.chart-content {
+    position: relative;
+}
+
+.chart-name {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 46%;
+    color: #989DA1;
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+#statistics .column {
+    padding: 0;
+}
+
+.ui.steps.times-steps {
+    min-height: 100px;
+    border-radius: 0;
+    border: none;
+    width: 100%;
+    -webkit-box-shadow: 0 0 5px 2px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0 0 5px 2px rgba(0,0,0,0.1);
+    box-shadow: 0 0 5px 2px rgba(0,0,0,0.1);
+}
+
+.ui.steps.times-steps .step {
+    border-radius: 0;
+    border: none;
+    height: 100px;
+}
+
+.ui.steps.times-steps .step:nth-child(1) {
+    background-color: #f3f5f8;
+}
+
+.ui.steps.times-steps .step:nth-child(2) {
+    background-color: #e4eaf1;
+}
+
+.ui.steps.times-steps .step:nth-child(3) {
+    background-color: #d8e0e9;
+}
+
+.ui.steps.times-steps .step:after {
+    display: none;
+}
+
+.ui.steps.times-steps .step .content {
+    padding: 0 20px;
+    margin-top: 5px;
+}
+
+.ui.steps.times-steps .step .title {
+    margin-bottom: 10px;
+    font-weight: bold;
+    font-size: 16px;
+    color: #1a2226;
+}
+
+.ui.steps.times-steps .step .description {
+    font-size: 14px;
+    color: #1a2226;
+}
+
+table.report-table {
+    color: #1a2226;
+    font-weight: 500;
+    margin: 1em 0 !important;
+}
+
+table.report-table tr:last-child td {
+    border-bottom: 1px solid rgba(34,36,38,.1)
+}
+
+
+table.report-table .status {
+    width: 30px;
+    text-align: center;
+    font-size: 18px;
+    color: white;
+}
+
+table.report-table i {
+    margin: 0
+}
+
+.nowrap {
+    white-space: nowrap;
+}
+
+.report-modal .content {
+    padding: 0;
+}
+
+.report-modal .log {
+    color: #1a2226;
+    background-color: rgba(255,255,255, 0.7);
+    height: 100%;
+    padding: 30px;
+}
+
+.report-modal .header ul {
+    list-style: none;
+    padding: 0;
+}
+
+.report-modal .header ul > li {
+    font-size: 16px;
+    margin-top: 10px;
+}
+
+.report-modal .header ul > li:nth-child(1) {
+    font-size: 21px;
+    color: #999;
+}
+
+.report-modal .header ul > li:nth-child(2) {
+    font-size: 18px;
+    color: #666;
+}
+
+.logs-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.error-message {
+    color: #db2828;
+    word-break: break-all;
+}
+
+
+.ui.dimmer.modals.page.transition.visible.active {
+    overflow-y: auto;
+}
+
+.features-divider {
+    border-top: 1px solid rgba(34,36,38,.25);
+    margin: 30px 0;
+    -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.1);
+    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.1);
+}
+
+.ui.label.feature-state {
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.back-to-features-summary {
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    display: none;
+}
+
+.back-to-features-summary .ui.button {
+    background-color: #4A4A4A;
+    color: white;
+}
+
+#features .ui.container {
+    position: relative;
+}
+
